--- a/DDA_Algorithm_code_in_python_sakibsplash.ipynb
+++ b/DDA_Algorithm_code_in_python_sakibsplash.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "7a5d2eef-57a0-4e5a-ac1e-d19144e75256",
    "metadata": {},
    "outputs": [
@@ -15,45 +15,57 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intermediary points: [(20.0, 20.0), (21.0, 20.75), (22.0, 21.5), (23.0, 22.25), (24.0, 23.0), (25.0, 23.75), (26.0, 24.5), (27.0, 25.25), (28.0, 26.0), (29.0, 26.75), (30.0, 27.5), (31.0, 28.25), (32.0, 29.0), (33.0, 29.75), (34.0, 30.5), (35.0, 31.25), (36.0, 32.0), (37.0, 32.75), (38.0, 33.5), (39.0, 34.25), (40.0, 35.0), (41.0, 35.75), (42.0, 36.5), (43.0, 37.25), (44.0, 38.0), (45.0, 38.75), (46.0, 39.5), (47.0, 40.25), (48.0, 41.0), (49.0, 41.75), (50.0, 42.5), (51.0, 43.25), (52.0, 44.0), (53.0, 44.75), (54.0, 45.5), (55.0, 46.25), (56.0, 47.0), (57.0, 47.75), (58.0, 48.5), (59.0, 49.25)]\n"
+     ]
     }
    ],
    "source": [
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "#code by sakib-11\n",
-    "import matplotlib.pyplot as plt\n",
-    "#function for finding the intermediary value\n",
-    "def DDA(x0,y0,x1,y1):\n",
     "\n",
-    "    #difference of x\n",
-    "    dx=abs(x0-x1)\n",
+    "#function for finding the intermediary value\n",
+    "def DDA(x0, y0, x1, y1):\n",
     "    \n",
     "    #difference of x\n",
-    "    dy=abs(y0-y1)\n",
+    "    dx = abs(x0 - x1)\n",
+    "    #difference of y\n",
+    "    dy = abs(y0 - y1)\n",
     "    \n",
     "    #finding max steps for the points\n",
-    "    steps=max(dx,dy)\n",
-    "    \n",
-    "    xsteps= dx/steps\n",
-    "    ysteps= dy/steps\n",
-    "    x= float(x0)\n",
-    "    y= float(y0)\n",
+    "    steps = max(dx, dy)\n",
+    "    xsteps = dx / steps\n",
+    "    ysteps = dy / steps\n",
+    "    x = float(x0)\n",
+    "    y = float(y0)\n",
+    "\n",
     "    #creating the list to store intermediary  x,y values\n",
-    "    x_points=[]\n",
-    "    y_points=[]\n",
+    "    x_points = []\n",
+    "    y_points = []\n",
     "    for i in range(steps):\n",
-    "        #inserting in list\n",
+    "         #inserting in list\n",
     "        x_points.append(x)\n",
     "        y_points.append(y)\n",
-    "        #increment those x,y\n",
-    "        x=x+xsteps\n",
-    "        y=y+ysteps\n",
     "\n",
-    "    plt.plot(x_points,y_points,marker=\"o\", markersize=1, markerfacecolor=\"green\")\n",
+    "        #increment those x,y\n",
+    "        x = x + xsteps\n",
+    "        y = y + ysteps\n",
+    "\n",
+    "    plt.plot(x_points, y_points, marker=\"o\", markersize=1, markerfacecolor=\"green\")\n",
     "    plt.show()\n",
-    "#main code\n",
-    "x0,y0=20,20\n",
-    "x1,y1=60,50\n",
-    "DDA(x0,y0,x1,y1)"
+    "\n",
+    "    return list(zip(x_points, y_points))\n",
+    "\n",
+    "#main_Code\n",
+    "x0, y0 = 20, 20\n",
+    "x1, y1 = 60, 50\n",
+    "intermediary_points = DDA(x0, y0, x1, y1)\n",
+    "print(\"Intermediary points:\", intermediary_points)\n"
    ]
   },
   {
